--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,7 +3,18 @@ name: tests
 on: push
 
 jobs:
+  setup:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: setupJava
+        uses: actions/setup-java@v1
+        with:
+          java-version: 17
+
   testsJob:
+    needs: setup
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
